CTA spacing tracking fixed

--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ p {
   background-color: rgba(0, 0, 0, 0.4);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: start;
   align-items: center;
 
   -webkit-animation: fadein 4s; /* Safari, Chrome and Opera > 12.1 */
@@ -159,6 +159,7 @@ p {
 }
 
 #footer {
+  margin-top: 5rem;
   position: relative;
   width: 100%;
   display: flex;
